<resources>
    <string name="app_name">FDNT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Menu</string>
    <string name="action_settings">Ustawienia</string>
    <string name="nav_header_subtitle">stypendysta@dzielo.pl</string>
    <string name="nav_header_title">Nie zalogowany</string>
    <string name="title_activity_logowanie">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logowanie_przycisk">Zaloguj się</string>
    <string name="logowanie_hasło">Hasło</string>
    <string name="logowanie_gora">Logowanie</string>
    <string name="zle_dane">Zły login lub hasło!</string>
    <string name="title_activity_kalendarz">Kalendarz</string>
    <string name="o_fundacji_gora">O Fundacji</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_o_fundacji">O FUNDACJI</string>
    <string name="subheader_kim_jestesmy">KIM JESTEŚMY?</string>
    <string name="subheader_co_robimy">CO ROBIMY?</string>
    <string name="subheader_gdzie_jestesmy">GDZIE JESTEŚMY?</string>
    <string name="header_nasz_patron">NASZ PATRON</string>
    <string name="subheader_jp_II">ŚW. JAN PAWEŁ II</string>
    <string name="subheader_my_o_patronie">MY O PATRONIE</string>
    <string name="subheader_dzien_papieski">DZIEŃ PAPIESKI</string>
    <string name="subheader_modlitwa">MODLITWA</string>
    <string name="header_kontakt">KONTAKT</string>
    <string name="subheader_fundacja">FUNDACJA</string>
    <string name="subheader_biuro">BIURO</string>
    <string name="subheader_zarzad">ZARZĄD</string>
    <string name="header_dla_darczyncy">DLA DARCZYŃCY</string>
    <string name="title_activity_ustawienia_ax">Ustawienia</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_poczta">Poczta</string>
    <string name="linia">linia</string>
    <string name="corobimy_tekst">Głównym zadaniem i założeniem Fundacji jest wspieranie rozwoju naukowego zdolnej młodzieży pochodzącej z niezamożnych rodzin, z małych miast i terenów wiejskich, ale jej działanie nie ogranicza się jedynie do programu stypendialnego.</string>
    <string name="kimjestesmy_tekst">Aktualnie Fundacja “Dzieło Nowego Tysiąclecia” obejmuje programem stypendialnym około 2000 uczniów szkół podstawowych i średnich oraz studentów z całej Polski, a także młodzież polskiego pochodzenia z Brazylii, Argentyny, Mołdawii, Ukrainy, Rosji, Uzbekistanu i Kazachstanu.
    Na czele Rady Fundacji stoi ks. kard. Łukasz Nycz, a przewodniczącym Zarządu jest ks. Dariusz Kowalczyk. Siedziba znajduje się w Warszawie w Sekretariacie Konferencji Episkopatu Polski.
    W ciągu dziewiętnastu lat swojej działalności Fundacja objęła opieką 4000 młodych ludzi z całej Polski zgodnie z wezwaniem Ojca Świętego do „nowej wyobraźni miłosierdzia”. Stypendyści z każdego zakątka Polski tworzą Żywy Pomnik Papieża Jana Pawła II, przy okazji jednocząc się i realizując swoje pasje i cele.</string>
    <string name="gdziejestesmy_tekst">Po pielgrzymce Jana Pawła II do Polski w 2000 roku, u początków idei powstania Fundacji, komisja sponsoringowa pielgrzymki zadecydowała o przekazaniu 700 tys. złotych na stypendia dla ubogiej, zdolnej młodzieży. Do programu pilotażowego wybrano 5 diecezji z terenów popegeerowskich i wykazujących wysoki stopień bezrobocia. Były to: diecezja przemyska, koszalińsko – kołobrzeska, drohiczyńska, ełcka i radomska. Rok później kontynuowanie dzieła stanęło pod znakiem zapytania, gdyż sponsorzy programu wycofali się. Pojawiła się jednak idea zbiórek środków na fundusz stypendialny towarzyszących obchodom Dnia Papieskiego. Już pierwsza zbiórka „Dzielmy się miłością” przyniosła ok. 2 mln 300 tys. złotych, co wydatnie rozszerzyło realizowany przez Fundację program stypendialny. Z roku na rok liczba diecezji i stypendystów objętych programem zwiększała się, by w 2014 roku osiągnąć apogeum – Fundacja wspierała wtedy ponad 2,5 tys. młodych z całej Polski. Wszystko dzięki ofiarności Polaków, którym nie jest obojętny los uboższych. Aktualnie Fundacja obejmuje programem stypendialnym około 2000 uczniów szkół podstawowych, gimnazjalistów, uczniów szkół średnich i studentów z całej Polski. Poszerza ona także program o młodzież polskiego pochodzenia z Brazylii, Argentyny, Mołdawii, Ukrainy, Rosji, Uzbekistanu i Kazachstanu.
    Po pielgrzymce Jana Pawła II do Polski w 2000 roku, u początków idei powstania Fundacji, komisja sponsoringowa pielgrzymki zadecydowała o przekazaniu 700 tys. złotych na stypendia dla ubogiej, zdolnej młodzieży. Do programu pilotażowego wybrano 5 diecezji z terenów popegeerowskich i wykazujących wysoki stopień bezrobocia. Były to: diecezja przemyska, koszalińsko – kołobrzeska, drohiczyńska, ełcka i radomska. Rok później kontynuowanie dzieła stanęło pod znakiem zapytania, gdyż sponsorzy programu wycofali się. Pojawiła się jednak idea zbiórek środków na fundusz stypendialny towarzyszących obchodom Dnia Papieskiego. Już pierwsza zbiórka „Dzielmy się miłością” przyniosła ok. 2 mln 300 tys. złotych, co wydatnie rozszerzyło realizowany przez Fundację program stypendialny. Z roku na rok liczba diecezji i stypendystów objętych programem zwiększała się, by w 2014 roku osiągnąć apogeum – Fundacja wspierała wtedy ponad 2,5 tys. młodych z całej Polski. Wszystko dzięki ofiarności Polaków, którym nie jest obojętny los uboższych. łej Polski.
    </string>
    <string name="jpII_tekst">Fundacja “Dzielo Nowego Tysiaclecia” jest odpowiedzią na nauczanie św. Jana Pawła II, naszego patrona. Stypendyści nazywani są niejednokrotnie Jego żywym pomnikiem, dlatego że swoją postawą i stylem życia niosą dalej słowo papieża Polaka.
    Jan Paweł II wciąż jest bardzo ważną postacią dla Polaków, nawet jeżeli niektórzy z nas nie pamiętają go zbyt dobrze. Od niego uczymy się dobra i ciepła w kontakcie z drugim człowiekiem, ale też człowieczeństwa w najpełniejszym wymiarze oraz miłosierdzia i zawierzenia swojego życia Matce Bożej. Jan Paweł II pokazuje nam też, że musimy stawiać samym sobie wysokie wymagania, nawet jeżeli inni od nas nie wymagają. Swoim życiem już w młodości świadczył, że talenty, które każdy z nas posiada są darem danym nam przez Boga i nie możemy ich zakopać, ale naszym zadaniem jest nieustannie je rozwijać dla dobra ludzi i ojczyzny oraz ku chwale Bożej. Fundacja umożliwia to wielu młodym ludziom, wpisując się tym bardziej w ideały głoszone przez Ojca Świętego, natomiast zachęcając stypendystów do wolontariatu uczy ich, że talenty którymi są obdarzeni mogą być dla drugiego człowieka prawdziwym skarbem.
    Budując żywy pomnik Jana Pawła II, czyli Fundację “Dzieło Nowego Tysiąclecia” na fundamencie wartości głoszonych przez naszego patrona przygotowujemy
    młodych ludzi do tego, aby idąc w świat pamiętali zawsze o tym, że nie żyją tylko dla siebie, ale przede wszystkim dla Boga oraz ludzi którzy znajdują się dookoła nich i są ich bliźnimi, którym należy wybaczać oraz nieść dobro. Dlatego też patronat Jana Pawła II to przede wszystkim patronat miłości i miłosierdzia.</string>
    <string name="myopatronie_tekst">Jeden ze stypendystów, Jakub Kubat mówi o Janie Pawle II tak: Dla mnie Jan Paweł II jest wspaniałym wzorem, który staram się naśladować. Jego życie uczy mnie pokory wobec Boga. Wszystkie Jego nauki pomimo upływu lat są wciąż tak samo aktualne. Nasz kochany Papież pokazywał nam, że należy zmieniać świat zaczynając od samego siebie. Całe życie Karola Wojtyły pokazuje nam, jak należy realizować słowa "Totus Tuus Maria", i jak być prawdziwym chrześcijaninem. On naprawdę ukazał nam tajemnicę Bożego Miłosierdzia, wybaczając zamachowcy, który omal Go nie zabił. Ojciec Święty jednoczył chrześcijan na całym świecie zacierając pozornie nieprzekraczalne granice.</string>
    <string name="adres">Adres:</string>
    <string name="adres_tekst">Fundacja Dzieło Nowego Tysiąclecia Skwer ks. kard. Stefana Wyszyńskiego 601-015 Warszawa</string>
</resources>